--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ Setelah join nanti akan langsung masuk grup bimbingan dan mendapatkan full bimbi
     Kesempatan tidak datang dua kali. Sekarang waktu terbaik untuk memulai perjalananmu menuju penghasilan tambahan dan kebebasan finansial. Jangan tunda!
   </p>
   <!-- Sudah kamu punya wa-button, tapi bisa diganti seperti ini agar lebih UI -->
-<a href="https://t.me/araaraavv" class="wa-button" style="position: fixed; bottom: 20px; right: 20px; border-radius: 50px; background-color: #25c7d3; color: #fff; padding: 14px 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.3); font-size: 1rem;">
+<a href="https://t.me/joinadminra" class="wa-button" style="position: fixed; bottom: 20px; right: 20px; border-radius: 50px; background-color: #25c7d3; color: #fff; padding: 14px 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.3); font-size: 1rem;">
   💬 Chat Admin
 </a>
 
@@ -689,7 +689,7 @@ Setelah join nanti akan langsung masuk grup bimbingan dan mendapatkan full bimbi
   
   <p><strong>JIKA BERMINAT, CHAT ADMIN SEKARANG DENGAN KETIK:</strong></p>
   <div class="cta-button">
-    <a href="https://t.me/araaraavv" class="btn">📩 FIX JOIN</a>
+    <a href="https://t.me/joinadminra" class="btn">📩 FIX JOIN</a>
   </div>
 </section>
 
